@@ -656,3 +656,8 @@
 	(Dank an Telefonmännchen)
 	* phonebook: Umlaute beim Lesen vom AVM-Telefonbuch korrigiert
 	(Kodierung wurde geändert)
+
+2009-05-09:
+
+	* reverse: DasÖrtliche hat seine Webseiten wieder einmal geändert:
+	Rückwärtssuche angepasst
